# csv2

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  about.html  craftsprint.js  craftsprint.wasm  game.html  index.html  style.css
.github/workflows/: android.yml  web.yml
engine/core/: Engine.cpp  Engine.hpp
engine/game/: Player.hpp  World.hpp
engine/input/: InputManager.hpp
engine/math/: Math.hpp
engine/render/: Renderer.cpp  Renderer.hpp  Shaders.hpp
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/cpp/: jni_bridge.cpp
platform/android/app/src/main/java/io/craftsprint/: AboutActivity.java  GameActivity.java  MainActivity.java  SettingsActivity.java
platform/web/: main.js  settings.html
